# voulr

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/server/: Cargo.toml  package.json
apps/server/migrations/: 20241203025108_schema.sql
apps/server/src/: error.rs  main.rs  utils.rs
apps/server/src/routes/: logos.rs
apps/server/src/routes/github/: callback.rs  login.rs  mod.rs
apps/web/: components.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/components/icons/arrow/: arrow.svelte
apps/web/src/lib/components/icons/download/: download.svelte  index.ts
apps/web/src/lib/components/icons/google/: google.svelte  index.ts
apps/web/src/lib/components/icons/lockup/: lockup.svelte
apps/web/src/lib/components/icons/logomark/: logomark.svelte
apps/web/src/lib/components/icons/mail/: index.ts  mail.svelte
apps/web/src/lib/components/icons/menu/: menu.svelte
apps/web/src/lib/components/icons/t/: index.ts  t.svelte
apps/web/src/lib/components/ui/arrow-btn/: arrow-btn.svelte
apps/web/src/lib/components/ui/btn/: btn.svelte  index.ts
apps/web/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  (+4 more)
apps/web/src/lib/utils/: constants.ts  cva.config.ts  urls.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/(auth)/: +layout.svelte
apps/web/src/routes/(auth)/login/: +page.svelte
apps/web/src/routes/(auth)/register/: +page.svelte
apps/web/src/routes/(landing)/: +layout.svelte  +page.svelte
(+8 files in other folders)
