[package]
name = "voulr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
lambda_http = { version = "0.13.0", optional = true }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "fs",
] }
tower-http = { version = "0.6.1", features = ["cors"] }
cfg-if = "1.0.0"
tokio-util = { version = "0.7.12", features = ["io"] }

[features]
lambda = ["dep:lambda_http"]
