[package]
name = "voulr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
lambda_http = { version = "0.13.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["cors"] }
cfg-if = "1.0.0"
oauth2 = "4.4.2"
dotenv = "0.15.0"
serde = "1.0.215"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
] }

[features]
lambda = ["dep:lambda_http"]
